--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Web 2 Framework</title>
+    <title>US</title>
 
     <!-- Faveicons -->
     <link rel="apple-touch-icon" sizes="180x180" href="favicons/">
@@ -26,7 +26,7 @@
 </head>
 <body>
     
-    <h1>Web 2 Framework</h1>
+    <h1>US</h1>
 
 
 
