--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     
     <h1>US</h1>
 
-
+    <video src="video/trailer.mp4" controls></video>
 
     <!-- jQuery -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
