Added webm movie link

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <h1>The Lorax</h1>
 
     <video src="video/trailer.mp4" controls></video>
+    <video src="video/trailer.webm" controls></video>
 
     <!-- jQuery -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
