background img added, video shadow added

--- a/index.html
+++ b/index.html
@@ -22,14 +22,27 @@
     <!-- Stylesheets -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" href="css/styles.css">
+  <link href="https://fonts.googleapis.com/css?family=Boogaloo" rel="stylesheet">
 
 </head>
 <body>
-    
-    <h1>The Lorax</h1>
-
-    <video src="video/trailer.mp4" controls></video>
-    <video src="video/trailer.webm" controls></video>
+    <section>
+    <h1>The LORAX</h1>
+<div class="center">
+    <video controls src="https://github.com/sukhleenbolina/movie-trailer/blob/master/video/trailer.mp4?raw=true"
+       controls autoplay false
+       controls src="https://github.com/sukhleenbolina/movie-trailer/blob/master/video/trailer.webm?raw=true"
+       controls autoplay false
+</video> </div>
+      </section>
+  <section class="characters">
+<div id=ted></div>
+<div id=lorax></div>
+<div id=audrey></div>
+<div id=gma></div>
+<div id=onceler></div>
+<div id=ohare></div>
+    </section>
 
     <!-- jQuery -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -38,3 +51,5 @@
     <script src="js/scripts.js"></script>
 </body>
 </html>
+
+
