Media Queries added
at 900px

--- a/index.html
+++ b/index.html
@@ -23,33 +23,34 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" href="css/styles.css">
   <link href="https://fonts.googleapis.com/css?family=Boogaloo" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 
 </head>
 <body>
-    <section>
-    <h1>The LORAX</h1>
-<div class="center">
-    <video controls src="https://github.com/sukhleenbolina/movie-trailer/blob/master/video/trailer.mp4?raw=true"
-       controls autoplay false
-       controls src="https://github.com/sukhleenbolina/movie-trailer/blob/master/video/trailer.webm?raw=true"
-       controls autoplay false
-</video> </div>
-      </section>
-  <section class="characters">
-<div id=ted></div>
-<div id=lorax></div>
-<div id=audrey></div>
-<div id=gma></div>
-<div id=onceler></div>
-<div id=ohare></div>
-    </section>
 
-    <!-- jQuery -->
+<h1 class="name">The LORAX</h1>
+
+
+<div class="center">
+	<div id="player" data-plyr-provider="youtube" data-plyr-volume=".15" data-plyr-embed-id="1bHdzTUNw-4"></div>
+  
+ <h3>Synopsis</h3> 
+<p class=summary>A Twelve-year-old Ted lives in a place virtually devoid of nature; no flowers or trees grow in the town of Thneedville. Ted would very much like to win the heart of Audrey, the girl of his dreams, but to do this, he must find that which she most desires: a Truffula tree. To get it, Ted delves into the story of the Lorax, once the gruff guardian of the forest, and the Once-ler, who let greed overtake his respect for nature.  </p>
+  
+
+    
+  
+  </div>
+
+
+ 
+  
+  
+  
+     <!-- jQuery -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <!-- Plugins -->
     <!-- My scripts -->
     <script src="js/scripts.js"></script>
 </body>
 </html>
-
-
