--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
 
 
     <!-- Stylesheets -->
-    <link rel="stylesheet" href="https://cdn.plyr.io/3.3.12/plyr.js">
     <link rel="stylesheet" href="https://cdn.plyr.io/3.3.12/plyr.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" href="css/styles.css">
@@ -98,7 +97,7 @@
    <!-- jQuery -->
    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
    <!-- Plugins -->
-   <script> src=""</script>
+   <script> src="https://cdn.plyr.io/3.3.12/plyr.js"</script>
    <!-- My scripts -->
    <script src="js/scripts.js"></script>
   </body>
