Added transparent video background

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 
     <!-- Stylesheets -->
-    <link rel="stylesheet" href="https://cdn.plyr.io/3.5.3/plyr.css" />
+    <link rel="stylesheet" href="https://cdn.plyr.io/3.5.3/plyr.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" href="css/styles.css">
   <link href="https://fonts.googleapis.com/css?family=Boogaloo" rel="stylesheet">
